--- a/docker/dev/docker-compose.yaml
+++ b/docker/dev/docker-compose.yaml
@@ -1,9 +1,5 @@
 version: '3.7'
 
-volumes:
-  prometheus_data: {}
-  grafana_data: {}
-
 services:
   minio:
     image: minio/minio
@@ -19,35 +15,86 @@ services:
         - MINIO_CACHE_WATERMARK_HIGH=90
     command: 'server /data1 --console-address ":9001"'
     ports:
-        # - "9000:9000"
+        #- "9000:9000"
         - "9001:9001"
     volumes: 
         - ./data1:/data1
+
+  mosquitto:
+    image: eclipse-mosquitto
+    volumes:
+      - ../mosquitto:/mosquitto/config
+    ports:
+      - 1883:1883
+      - 8085:8085
+  
+# https://github.com/sapcc/mosquitto-exporter
+  mqtt-exporter:
+    image: sapcc/mosquitto-exporter
+    ports:
+      - 9234:9234
+    environment:
+      - BROKER_ENDPOINT=tcp://mosquitto:1883
+      # - BIND_ADDRESS=
+      # - MQTT_USER=
+      # - MQTT_PASS=
+      # - MQTT_CERT=
+      # - MQTT_KEY=
+      # - MQTT_CLIENT_ID=
+    restart: unless-stopped
+
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
     restart: unless-stopped
-    # ports: 
-      # - "9090:9090"
+    ports: 
+      - "9090:9090"
     volumes:
       - ../prometheus:/etc/prometheus
-      - prometheus_data:/prometheus
+      - ../prometheus_data:/prometheus
     command:
       - '--config.file=/etc/prometheus/prometheus.yaml'
       - '--storage.tsdb.path=/prometheus'
       - '--storage.tsdb.retention.time=200h'
-    # networks:
-    #   - monitor
     labels:
-      org.label-schema.group: "monitor"          
+      org.label-schema.group: "monitor"       
+
   grafana: 
       image: grafana/grafana
       container_name: grafana
       restart: unless-stopped
       volumes:
-        - grafana_data:/var/lib/grafana
-        - ../grafana:/var/lib/grafana/dashboards
+        - ../grafana:/var/lib/grafana
+        - ../grafana/dashboards:/var/lib/grafana/dashboards
       ports:
           - "3000:3000"
       labels:
         org.label-schema.group: "monitor"
+
+  keycloak-db:
+      image: postgres
+      volumes:
+        - ../postgres_data:/var/lib/postgresql/data
+      environment:
+        - POSTGRES_DB=keycloak
+        - POSTGRES_USER=keycloak
+        - POSTGRES_PASSWORD=password
+  
+  keycloak:
+      image: quay.io/keycloak/keycloak:15.0.2
+      environment:
+        - DB_VENDOR=POSTGRES
+        - DB_ADDR=keycloak-db
+        - DB_DATABASE=keycloak
+        - DB_USER=keycloak
+        - DB_SCHEMA=public
+        - DB_PASSWORD=password
+        # TODO: change this?
+        - KEYCLOAK_USER=admin
+        - KEYCLOAK_PASSWORD=admin
+        # Uncomment the line below if you want to specify JDBC parameters. The parameter below is just an example, and it shouldn't be used in production without knowledge. It is highly recommended that you read the PostgreSQL JDBC driver documentation in order to use it.
+        #JDBC_PARAMS: "ssl=true"
+      ports:
+        - "8080:8080"
+      depends_on:
+        - keycloak-db
