--- a/docker/prometheus/prometheus.yaml
+++ b/docker/prometheus/prometheus.yaml
@@ -15,6 +15,16 @@ scrape_configs:
   #   static_configs:
   #     - targets: ['cadvisor:8080']
 
+  # https://hub.docker.com/r/kpetrem/mqtt-exporter
+  - job_name: mqtt-exporter
+    static_configs:
+      - targets: ["mqtt-exporter:9234"]
+    # metric_relabel_configs:
+    #   - source_labels: [sensor]
+    #     regex: 'zigbee2mqtt_(.*)'
+    #     replacement: '$1'
+    #     target_label: sensor
+
   - job_name: 'prometheus'
     scrape_interval: 10s
     static_configs:
